--- a/flaskats/templates/layout.html
+++ b/flaskats/templates/layout.html
@@ -4,33 +4,36 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    {% if title %}
-        <title>ATS - {{ title }}</title>
-    {% else %}
-        <title>ATS</title>
-    {% endif %}
+  {% if title %}
+  <title>ATS - {{ title }}</title>
+  {% else %}
+  <title>ATS</title>
+  {% endif %}
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href={{ url_for('static', filename='img/favicon.png') }} />
-        
+  <link rel="icon" type="image/x-icon" href={{ url_for('static', filename='img/favicon.png' ) }} />
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link  href={{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}  rel="stylesheet" />
-  <link  href={{ url_for('static', filename='vendor/bootstrap-icons/bootstrap-icons.css') }} rel="stylesheet" />
-  <link  href={{ url_for('static', filename='vendor/aos/aos.css') }} rel="stylesheet" />
-  <link  href={{ url_for('static', filename='vendor/glightbox/css/glightbox.min.css') }} rel="stylesheet" />
-  <link  href={{ url_for('static', filename='vendor/swiper/swiper-bundle.min.css') }} rel="stylesheet" />
-  <link  href={{ url_for('static', filename='vendor/remixicon/remixicon.css') }} rel="stylesheet" />
+  <link href={{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css' ) }} rel="stylesheet" />
+  <link href={{ url_for('static', filename='vendor/bootstrap-icons/bootstrap-icons.css' ) }} rel="stylesheet" />
+  <link href={{ url_for('static', filename='vendor/aos/aos.css' ) }} rel="stylesheet" />
+  <link href={{ url_for('static', filename='vendor/glightbox/css/glightbox.min.css' ) }} rel="stylesheet" />
+  <link href={{ url_for('static', filename='vendor/swiper/swiper-bundle.min.css' ) }} rel="stylesheet" />
+  <link href={{ url_for('static', filename='vendor/remixicon/remixicon.css' ) }} rel="stylesheet" />
 
   <!-- Template Main CSS File -->
-  <link  href="{{ url_for('static', filename='css/main.css') }}"" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/main.css') }}"" rel=" stylesheet" />
 </head>
+
 <body class="page-about">
 
   <!-- ======= Header ======= -->
@@ -38,7 +41,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="/" class="logo d-flex align-items-center">
-        <img src={{ url_for('static', filename='img/favicon.png') }} alt="">
+        <img src={{ url_for('static', filename='img/favicon.png' ) }} alt="">
         <h1 class="d-flex align-items-center">ATS</h1>
       </a>
 
@@ -55,7 +58,7 @@
     <!-- ======= Breadcrumbs ======= -->
     {% block breadcrumbs %} {% endblock breadcrumbs %}
     <!-- End Breadcrumbs -->
-    
+
     {% block content %}
     {% endblock content %}
   </main>
@@ -72,7 +75,8 @@
             <div class="social-links d-flex  mt-3">
               <a href="https://twitter.com/jobandtalent_es" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="https://www.facebook.com/jobandtalent" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.linkedin.com/company/jobandtalent" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/company/jobandtalent" class="linkedin"><i
+                  class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -92,13 +96,14 @@
   </footer><!-- End Footer -->
   <!-- End Footer -->
 
-  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <div id="preloader"></div>
 
   <!--  Template Main JS File-->
-  <script src={{ url_for('static', filename='js/main.js') }}></script>
- 
+  <script src={{ url_for('static', filename='js/main.js' ) }}></script>
+
 </body>
 
 </html>
