--- a/flaskats/static/css/main.css
+++ b/flaskats/static/css/main.css
@@ -36,13 +36,15 @@ body {
   color: var(--color-default);
 }
 
-a {
+a,
+back-button {
   color: var(--color-primary);
   text-decoration: none;
   transition: 0.3s;
 }
 
-a:hover {
+a:hover,
+back-button:hover {
   color: #82cbed;
   text-decoration: none;
 }
@@ -1344,8 +1346,7 @@ section {
 # Contact Section
 --------------------------------------------------------------*/
 .contact {
-  background: url("../img/contact-bg.png") left top no-repeat;
-  background-size: contain;
+
   position: relative;
 }
 
@@ -2338,4 +2339,50 @@ section {
 
 .alert-dark .alert-link {
   color: #18181c;
+}
+
+/*-------------------------------------------------------------*/
+/* Card */
+.card {
+  margin-bottom: 30px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0px 0 30px rgba(1, 41, 112, 0.1);
+}
+
+.card-header,
+.card-footer {
+  border-color: #ebeef4;
+  background-color: #fff;
+  color: #798eb3;
+  padding: 15px;
+}
+
+.card-title {
+  padding: 20px 0 15px 0;
+  font-size: 18px;
+  font-weight: 500;
+  color: #012970;
+  font-family: "Poppins", sans-serif;
+}
+
+.card-title span {
+  color: #899bbd;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.card-body {
+  padding: 0 20px 20px 20px;
+}
+
+.card-img-overlay {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+.linka,
+.linka:hover {
+  color: #fff;
+  text-decoration: none;
+
 }
