--- a/flaskats/templates/errors/403.html
+++ b/flaskats/templates/errors/403.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
-    <h1>You don't have permission to do that (403)</h1>
-    <p>Please check your account and try again</p>
-</div>
+<section>
+    <div class="container aos-init aos-animate">
+        <div class="content-section">
+            <h1>You don't have permission to do that (403)</h1>
+            <p>Please check your account and try again</p>
+        </div>
+    </div>
+</section>
 {% endblock content %}
