--- a/flaskats/templates/errors/404.html
+++ b/flaskats/templates/errors/404.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
-    <h1>Oops. Page Not Found (404)</h1>
-    <p>That page does not exist. Please try a different location</p>
-</div>
+<section>
+    <div class="container aos-init aos-animate">
+        <div class="content-section">
+            <h1>Oops. Page Not Found (404)</h1>
+            <p>That page does not exist. Please try a different location</p>
+        </div>
+    </div>
+</section>
 {% endblock content %}
