--- a/flaskats/templates/errors/500.html
+++ b/flaskats/templates/errors/500.html
@@ -1,7 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
-    <h1>Something went wrong (500)</h1>
-    <p>We're experiencing some trouble on our end. Please try again in the near future</p>
-</div>
+<section>
+    <div class="container aos-init aos-animate">
+        <div class="content-section">
+            <h1>Something went wrong (500)</h1>
+            <p>We're experiencing some trouble on our end. Please try again in the near future</p>
+        </div>
+    </div>
+</section>
+
 {% endblock content %}
